--- a/dist-newstyle/packagedb/ghc-9.4.8/nofib-prefetch-0.1.0.0-inplace.conf
+++ b/dist-newstyle/packagedb/ghc-9.4.8/nofib-prefetch-0.1.0.0-inplace.conf
@@ -14,9 +14,10 @@ exposed-modules:
     FiniteMap Geometric Hide Infer InferMain InferMonad IntLib Interact
     Key Knowledge Match Mate Matrices MaybeM Memo Move MyIO MyLib
     MyList MyRandom NofibUtils Numbers Parse ParseProlog Postscript
-    Preds Prime PrimeMain Problem Prog PrologData PrologMain PureEngine
-    QSort Result Rotate Search Shows Solution Solve Sort StackEngine
-    StateX Subst Substitution Table Term Type Vectors Version
+    Preds PrefetchBA Prime PrimeMain Problem Prog PrologData PrologMain
+    PureEngine QSort Result Rotate Search Shows Solution Solve Sort
+    StackEngine StateX Subst Substitution Table Term Type Vectors
+    Version
 
 import-dirs:
     "C:\\Users\\rohit\\MSc AI\\Implementation\\nofib-prefetch\\dist-newstyle\\build\\x86_64-windows\\ghc-9.4.8\\nofib-prefetch-0.1.0.0\\build"
@@ -39,10 +40,10 @@ data-dir:
 hs-libraries:         HSnofib-prefetch-0.1.0.0-inplace
 include-dirs:         C:\ghcup\msys64\mingw64\include
 depends:
-    array-0.5.4.0 base-4.17.2.1 containers-0.6.7
+    array-0.5.4.0 base-4.17.2.1 bytestring-0.11.5.3 containers-0.6.7
     criterion-1.6.3.0-8f4ab9a2f4ed85bc29848a5b5eaadd5767a783b1
     criterion-mea_-0.2.1.0-b4bfa750b6987c863c6cdcd4996cf439ef785425
-    deepseq-1.4.8.0 transformers-0.5.6.2
+    deepseq-1.4.8.0 ghc-prim-0.9.1 transformers-0.5.6.2
 
 haddock-interfaces:
     "C:\\Users\\rohit\\MSc AI\\Implementation\\nofib-prefetch\\dist-newstyle\\build\\x86_64-windows\\ghc-9.4.8\\nofib-prefetch-0.1.0.0\\doc\\html\\nofib-prefetch\\nofib-prefetch.haddock"
