Pointing to My Lib changes:

--- a/dist-newstyle/packagedb/ghc-9.4.8/nofib-prefetch-0.1.0.0-inplace.conf
+++ b/dist-newstyle/packagedb/ghc-9.4.8/nofib-prefetch-0.1.0.0-inplace.conf
@@ -13,9 +13,9 @@ exposed-modules:
     Cross Cryptarithm2 Dom EdgePlate Engine Environment Expert
     FiniteMap Geometric Hide Infer InferMain InferMonad IntLib Interact
     Key Knowledge Match Mate Matrices MaybeM Memo Move MyByteString
-    MyIO MyInternalTypes MyLib MyList MyPrim MyRandom NofibUtils
-    Numbers Parse ParseProlog Postscript Preds PrefetchBA Prime
-    PrimeMain Problem Prog PrologData PrologMain PureEngine QSort
+    MyIO MyInternalTypes MyLib MyList MyListLib MyPrim MyRandom
+    NofibUtils Numbers Parse ParseProlog Postscript Preds PrefetchBA
+    Prime PrimeMain Problem Prog PrologData PrologMain PureEngine QSort
     Result Rotate Search Shows Solution Solve Sort StackEngine StateX
     Subst Substitution Table Term Type Vectors Version
 
