--- a/dist-newstyle/packagedb/ghc-9.4.8/nofib-prefetch-0.1.0.0-inplace.conf
+++ b/dist-newstyle/packagedb/ghc-9.4.8/nofib-prefetch-0.1.0.0-inplace.conf
@@ -14,10 +14,11 @@ exposed-modules:
     FiniteMap Geometric Hide Infer InferMain InferMonad IntLib Interact
     Key Knowledge Match Mate Matrices MaybeM Memo Move MyByteString
     MyIO MyInternalTypes MyLib MyList MyListLib MyPrim MyRandom
-    NofibUtils Numbers Parse ParseProlog Postscript Preds PrefetchBA
-    Prime PrimeMain Problem Prog PrologData PrologMain PureEngine QSort
-    Result Rotate Search Shows Solution Solve Sort StackEngine StateX
-    Subst Substitution Table Term Type Vectors Version
+    Myprefetch NofibUtils Numbers Parse ParseProlog Postscript Preds
+    PrefetchBA Prime PrimeMain Problem Prog PrologData PrologMain
+    PureEngine QSort Result Rotate Search Shows Solution Solve Sort
+    StackEngine StateX Subst Substitution Table Term Type Vectors
+    Version
 
 import-dirs:
     "C:\\Users\\rohit\\MSc AI\\Implementation\\nofib-prefetch\\dist-newstyle\\build\\x86_64-windows\\ghc-9.4.8\\nofib-prefetch-0.1.0.0\\build"
